--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,32 +1,22 @@
-﻿using Carshop.Models;
-@model IEnumerable<Car>
+﻿
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
 }
 
 
-<!DOCTYPE html>
-<html>
-<head>
-	<meta name="viewport" content="width=device-width" />
-	<title>List</title>
-</head>
-<body>
-	<h2>List of Cars</h2>
+
+	<h1>List of Cars</h1>
+	<h3>@Model.currCategory</h3>
 	@{
-		foreach(var car in Model)
+		foreach(var car in Model.AllCars)
 		{
 			<div>
 			
-			<h2>Model : @car.Name</h2>
+			<h2>Model: @car.Name</h2>
 			<p>Price: @car.Price.ToString("c")</p>
 			
 			</div>
 		}
 	}
-</body>
-</html>
+
 ```
