--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,22 +1,24 @@
 ﻿
 
-@{
-}
-
-
 
 	<h1>List of Cars</h1>
 	<h3>@Model.currCategory</h3>
+	<div class="row mt-5mb-2">
 	@{
 		foreach(var car in Model.AllCars)
 		{
-			<div>
-			
+		<div class="col-lg-4">
 			<h2>Model: @car.Name</h2>
+			<img src="@car.Image" alt="Car Image" class="img-thumbnail" style="width: 100%; height: 200px;" />
+			<p>Category: @car.Category</p>
+			<p>Description: @car.ShortDescription</p>
 			<p>Price: @car.Price.ToString("c")</p>
-			
-			</div>
+			<p><a class="btn btn-warning" href="#">More</a></p>
+		</div>
+
 		}
 	}
+
+	</div>
 
 ```
